# pali-nimi-sin

./: Cargo.toml  o lukin e mi.md
src/: main.rs
